--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,6 +6,7 @@
 
 body {
     margin: 0 auto;
+    max-width: 375px;
     background-color: #FFFBF8;
     font: {
         family: 'Barlow', sans-serif;
@@ -260,7 +261,7 @@ footer {
 }
 
 @media screen and (min-width: 1440px) {
-    main {
+    body {
         max-width: 1440px;
     }
 
